server/manifests/sensor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sensor-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - dev.sensors.brave.coop
    secretName: sensors-tls
  rules:
  - host: "dev.sensors.brave.coop"
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: dev-sensor-server 
            port: 
              number: 8080
